# bap

./: .bazelrc  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  README.md  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: mlcompass-bap-bot-app-install-request.md  pub-sub-subscription-request.md
.github/workflows/: actions-cpu-e2e-test.yaml  actions-lint.yaml  benchmarking-tests.yaml  check-clang-format-on-error.yaml  check-clang-format.yaml  generate-dashboard-data.yaml  python-lint.yml  run-benchmarks-e2e-test.yaml  run-benchmarks.yaml  setup-uv-python-test.yaml  test-ci-buildifier-on-error.yaml  test-ci-buildifier.yaml  wait-for-connection-no-python.yaml  wait-for-connection-on-error-test.yaml  wait-for-connection-test.yaml  zizmor.yaml
ab_analyzer/: BUILD.bazel  ab_analyzer.py  ab_analyzer_lib.py  ab_analyzer_test.py
actions/execute_benchmark/: action.yaml
actions/workload_executors/bazel/: action.yaml
actions/workload_executors/python/: action.yaml  setup_python.sh
artifact_bundler/: BUILD.bazel  artifact_bundler.py  artifact_bundler_lib.py  artifact_bundler_test.py
bap_proto/: BUILD.bazel  benchmark_job.proto  benchmark_registry.proto  benchmark_result.proto
bap_proto/common/: BUILD.bazel  environment_config.proto
docs/: onboarding.md
e2e_test/: run_benchmark_summary_v1.py  run_benchmark_summary_v2.py  test_registry.pbtxt
gh_matrix_generator/: BUILD.bazel  gh_matrix_generator.py  gh_matrix_generator_lib.py  gh_matrix_generator_test.py
integrations/datastudio/: BUILD.bazel  main.py
post_pr_comment/: post_pr_comment.js
proto/: BUILD.bazel  benchmark_job.proto  benchmark_registry.proto  benchmark_result.proto
proto/common/: BUILD.bazel  environment_config.proto  metric.proto
publisher/: BUILD.bazel  publish_results.py  publish_results_lib.py  publish_results_test.py
static_threshold_analyzer/: BUILD.bazel  static_threshold_analyzer.py  static_threshold_analyzer_lib.py  static_threshold_analyzer_test.py
tb_parser/: BUILD.bazel  tb_parser.py  tb_parser_lib.py  tb_parser_test.py
utils/: BUILD.bazel  metric_parser.py
validate_registry/: BUILD.bazel  security_policy.json  validate_registry.py  validate_registry_test.py
validate_registry/validate_registry_test/: fail_path_traversal.pbtxt  fail_tag.pbtxt  fail_untrusted_org.pbtxt  pass_valid.pbtxt
