# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "validate_registry_lib",
    srcs = ["validate_registry.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:protobuf_python",
    ],
)

py_binary(
    name = "validate_registry",
    srcs = ["validate_registry.py"],
    deps = [
        ":validate_registry_lib",
    ],
)

py_test(
    name = "validate_registry_test",
    srcs = ["validate_registry_test.py"],
    data = glob(["validate_registry_test/*.pbtxt"]),
    deps = [
        ":validate_registry_lib",
    ],
)
